feat: added method for getting headers
